[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build123d-trame"
version = "1.0.0"
description = "build123d live CAD viewer"
requires-python = ">=3.11,<3.13"
dependencies = [
    "build123d>=0.8.0",
    "py-lib3mf<=2.3.1",
    "vtk>=9.4",
    "trame>=3.6",
    "trame-vtk>=2.8",
    "trame-vtklocal>=0.8",
    "trame-vuetify>=2.7",
    "watchfiles>=0.21",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.23",
    "pygls>=1.3",
    "jedi>=0.19",
]

[project.scripts]
b3d-live = "dev:main"
b3d-lsp  = "dev:lsp_main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
addopts = "-v"
